Fix 'Open Downloaded Folder' opening the incorrect directory Fix incorrect placeholder thumbnail being displayed after restart Add 'Copy Command Line' context menu for debugging